test/corpus/conflicts.txt
===
Type reference vs. name
===
modulepar NAME := {1,2,3};
modulepar REF NAME := {1,2,3};
---

(source_file
  (module_parameter
    (declarator
      (name)
      (primary
        (composite_literal
          (primary
            (number))
          (primary
            (number))
          (primary
            (number))))))
  (module_parameter
    (nested_type
      (reference))
    (declarator
      (name)
      (primary
        (composite_literal
          (primary
            (number))
          (primary
            (number))
          (primary
            (number)))))))
