test/corpus/modules.txt
===
Multiple modules
===

module A { };
module B { }

---

(source_file
  (module
    (name))
  (module
    (name)))

===
Nested modules
===

module A {
    module B {
    }
}

---

(source_file
  (module
    (name)
    (module
      (name))))
